# led_strip_controller

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  env_setup.sh  flash.sh
.github/workflows/: build.yml
docs/: hardware.md
src/: main.c
src/atmega32u4/: i2c.c
src/atmega32u4/gpio/: gpio.c  pin.h
src/eeprom/: cat24c128.c  eeprom.h
src/gas_gauge/: gas_gauge.h  max17048g.c
src/imu/: imu.h  mma8652.c
src/io/: blinky.c  blinky.h  gpio.h  i2c.h  uart.h
src/targets/rev30/: blinky.c  gpio.c  gpio_map.h
src/targets/rev31/: gpio_map.h
src/targets/rev31/gpio/: mapping.h
src/util/: math.h
targets/: board_config.h.in  rev30.cmake
